# WCRP

./: CMakeLists.txt  FindGSL.cmake  LICENSE.md  README.md
datasets/: README.md  spanish_expert_labels.txt
include/: MixtureWCRP.hpp  Random.hpp  common.hpp
samples/: cross_validation.cpp  find_skills.cpp
splits/: fractions_splits.txt  geometry_splits.txt  physics_splits.txt  spanish_splits.txt  statics_splits.txt
src/: MixtureWCRP.cpp  Random.cpp  common.cpp  main.cpp
